# LLVM_ShuffleVector_Optimizer

./: How ShuffleVector Works  How ShuffleVector Works.md  README.md  main.ll
ByteSwap/: CMakeLists.txt  Makefile  README.md  a.c  a.ll  a.s  asm_comparison  byte_swap.ll  byte_swap.s  byte_swap_64.ll  comparison_on_64bytes.out  perfstat.sh  sfl_to_bswap.cpp  sfl_vec.ll  sfl_vec.s  test_framework.c
ByteSwap/64Bytes/: byte_swap_64  comparison_on_64bytes.out  func_sfl.ll  perfstat.sh  sfl_vec_64  sfl_vec_64.ll
ByteSwap/8Bytes/: Makefile  byte_swap  byte_swap.s  sfl_vec  sfl_vec.ll  sfl_vec.s
FinalProject_LLVMShuffleOptimizer/IR/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme
FinalProject_LLVMShuffleOptimizer/IR/Pass/: CMakeLists.txt  Makefile  PatternName.h  cmake_install.cmake  shfRplc.cpp  shfRplc_indent.cpp  shfRplc_ver1.2.cpp  shfRplc_ver1.4.cpp
FinalProject_LLVMShuffleOptimizer/IR/test-LShr/result/: res-LShr-2-lane-1.bc  res-LShr-2-lane-1.ll  res-LShr-2-lane-2.bc  res-LShr-2-lane-2.ll
FinalProject_LLVMShuffleOptimizer/IR/test-LShr/test/: LShr-2-lane-1.ll  LShr-2-lane-2.ll
FinalProject_LLVMShuffleOptimizer/IR/test-blend/result/: blend.bc  blend.ll  blend_unaligned.bc  blend_unaligned.ll
FinalProject_LLVMShuffleOptimizer/IR/test-blend/test/: blend.ll  blend_unaligned.ll
FinalProject_LLVMShuffleOptimizer/IR/test-rotate/result/: res-rot-1-lane-1.bc  res-rot-1-lane-1.ll  res-rot-1-lane-2.bc  res-rot-1-lane-2.ll  res-rot-3-lane-2.bc  res-rot-3-lane-2.ll
FinalProject_LLVMShuffleOptimizer/IR/test-rotate/test/: rot-1-lane-1.ll  rot-1-lane-2.ll  rot-3-lane-2.ll
FinalProject_LLVMShuffleOptimizer/IR/test-shl/result/: k1.bc  k1.ll  k2.bc  k2.ll  k3.bc  k3.ll  (+4 more)
(+17 files in other folders)
